[package]
name = "truth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
] }
truth-rs-core = { path = "crates/truth-rs-core" }
truth-rs-type = { path = "crates/truth-rs-type" }
truth-rs-server = { path = "crates/truth-rs-server" }
truth-rs-constants = { path = "crates/truth-rs-constants" }
mimalloc = "0.1.39"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "z"
