[package]
name = "truth-rs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", default-features = false, features = [
  "macros",
] }
actix-cors = "0.6.4"
truth-rs-core = { path = "../truth-rs-core" }
truth-rs-type = { path = "../truth-rs-type" }
sonic-rs = "0.2.6"
